--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<html></html>
+
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+<meta charset="UTF-8">
+<title>Alldata Web</title>
+<meta name="abstract" content="Alldata Web Resmi Web Sitesidir.">
+<meta http-equiv="content-language" content="tr">
+<meta http-equiv="content-type" content="text/html charset=utf-8" />
+<meta name="publisher" content="Sultan Security" />
+<meta name="reply-to" content="iletisim@alldata.web.tr" />
+<meta name="description" content="Alldata Web Resmi Web Sitesidir.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="all">
+<meta name="author" content="Alldata Web,iletisim@alldata.web.tr">
+<meta name="keywords" content="alldata web,alldataweb,alldata web tr,alldata.web.tr,alldatawebtr" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Alldata Web" />
+<meta name="twitter:description" content="Alldata Web Resmi Web Sitesidir." />
+<meta name="twitter:url" content="https://alldata.web.tr/" />
+<meta property="og:title" content="Alldata Web" />
+<meta property="og:description" content="Alldata Web Resmi Web Sitesidir." />
+<meta property="og:url" content="https://alldata.web.tr/" />
+<link rel="canonical" href="https://alldata.web.tr/" />
+<link rel="dns-prefetch" href="//fonts.gstatic.com">
+<link rel="icon" href="https://sultansecurity.net/favicon.png" sizes="256x256" alt="sultansecurity.net" name="Alldata Web" type="image/png">
+<link rel="stylesheet" alt="alldata.web.tr" name="Alldata Web" href="https://sultansecurity.net/bootstrap-custom.css">
+<link rel="stylesheet" alt="alldata.web.tr" name="Alldata Web" href="https://sultansecurity.net/main.css">
+</head>
+<body class="theme-dark">
+<div id="overlay-effect"></div>
+<section class="home-area element-cover-bg" id="home" style="background-color:#00000">
+<div class="container h-100">
+<div class="row h-100 align-items-center justify-content-center">
+<div class="col-12 col-lg-8 home-content text-center">
+<h1 class="home-name">Alldata Web</h1>
+<p style="display: none;"> </p>
+<h2 style="display: none;">Alldata Web</h2>
+<p style="display: none;"> </p>
+<h3 style="display: none;">Alldata Web</h3>
+<p style="display: none;"> </p>
+<h4 style="display: none;">Alldata Web</h4>
+<p style="display: none;"> </p>
+<h5 style="display: none;">Alldata Web</h5>
+<p style="display: none;"> </p>
+<h6 style="display: none;">Alldata Web</h6>
+<p style="display: none;"> </p>
+<b style="display: none;">Alldata Web</b>
+<p style="display: none;"> </p>
+<p style="display: none;">Alldata Web</p>
+<p style="display: none;"> </p>
+<p class="cd-headline clip home-headline">Yakında Sizlerleyiz Beklemede Kalın</p>
+</div>
+</div>
+</div>
+</section>
+</body>
+</html>
