--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -23,7 +22,7 @@
 <meta property="og:url" content="https://alldata.web.tr/" />
 <link rel="canonical" href="https://alldata.web.tr/" />
 <link rel="dns-prefetch" href="//fonts.gstatic.com">
-<link rel="icon" href="https://sultansecurity.net/favicon.png" sizes="256x256" alt="sultansecurity.net" name="Alldata Web" type="image/png">
+<link rel="icon" href="https://sultansecurity.net/favicon.png" sizes="256x256" alt="alldata.web.tr" name="Alldata Web" type="image/png">
 <link rel="stylesheet" alt="alldata.web.tr" name="Alldata Web" href="https://sultansecurity.net/bootstrap-custom.css">
 <link rel="stylesheet" alt="alldata.web.tr" name="Alldata Web" href="https://sultansecurity.net/main.css">
 </head>
