--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <p style="display: none;">Alldata Web</p>
 <p style="display: none;"> </p>
 <p class="cd-headline clip home-headline">Yakında Sizlerleyiz Beklemede Kalın</p>
+<a style="display: none;" name="Sultan Security" title="Sultan Security" alt="Sultan Security" href="https://sultansecurity.net" rel="dofollow">Sultan Security</a>
 </div>
 </div>
 </div>
